--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -90,7 +90,7 @@
             <ul>
                 <li><a href="/dashboard"><img src="static/dashboard-icon.png" alt="Dashboard Icon"> Dashboard</a></li><hr/>
                 <li><a href="/community"><img src="static/community-icon.png" alt="Community Icon"> Community</a></li><hr/>
-                <li><a href="/therapist"><img src="static/therapist-icon.png" alt="Therapist Icon"> Meet a Therapist</a></li><hr/>
+                <li><a href="/meet_a_therapist"><img src="static/therapist-icon.png" alt="Therapist Icon"> Meet a Therapist</a></li><hr/>
                 <li><a href="/chat"><img src="static/chat-icon.png" alt="Chat Icon"> Chat with a Therapist</a></li><hr/>
                 <li><a href="https://forms.gle/2J9XnW7ujA1T5Dtg7"><img src="static/wellness-test-icon.png" alt="Wellness Test Icon"> Take a Wellness Test</a></li><hr/>
                 <li><a href="/progress"><img src="static/progress-icon.png" alt="Progress Icon"> Progress</a></li><hr/>
@@ -111,7 +111,7 @@
             <div class="community">
                 <h3>Community</h3>
                 {% for chat in chats %}
-                    <p><a href="/community/{{ chat.id }}">{{ chat.name }}</a></p>
+                    <p><a href="/community">{{ chat.name }}</a></p>
                 {% endfor %}
             </div>
             <div class="reminder">
